@@ -92,6 +92,8 @@ namespace KJS {
         macro(op_get_by_id_proto) \
         macro(op_get_by_id_chain) \
         macro(op_get_by_id_generic) \
+        macro(op_get_array_length) \
+        macro(op_get_string_length) \
         macro(op_put_by_id) \
         macro(op_put_by_id_replace) \
         macro(op_put_by_id_generic) \
