@@ -1,5 +1,13 @@
 2008-09-02  Geoffrey Garen  <ggaren@apple.com>
 
+        Reviewed by Oliver Hunt.
+        
+        Fast path for array.length and string.length.
+        
+        SunSpider says 0.5% faster.
+
+2008-09-02  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Anders Carlsson.
         
         Added optimized paths for comparing to null.
